# advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
2022/01/: main.el  main.hs
2022/02/: main.el
2022/03/: main.el
2022/04/: main.el
2022/05/: main.el  main.rs
2022/06/: main.rs
2022/07/: main.rs  tree.rs
2022/08/: iter.rs  main.rs
2022/09/: main.rs
2022/10/: main.rs
2022/11/: main.rs
2022/12/: main.rs  map.rs  pathings.rs
2022/13/: equality.rs  main.rs  parse.rs
2022/14/: main.rs  map.rs  physics.rs
2022/15/: main.rs
2022/16/: graph.rs  main.rs
2022/lib/: common.el
src/: main.rs  twenty_two.rs
src/lib/: common.el  coord.rs  coord3d.rs  lib.rs  logging.rs  main.rs  map.rs  neighbor_map.rs
src/lib/year_2022/: mod.rs
src/lib/year_2023/: mod.rs
src/year_2022/: mod.rs
src/year_2022/day_02/: main.el
src/year_2022/day_07/: mod.rs
src/year_2022/day_08/: mod.rs
src/year_2022/day_11/: mod.rs
src/year_2022/day_12/: map.rs  pathings.rs
src/year_2022/day_13/: parse.rs  value.rs
src/year_2022/day_14/: map.rs  physics.rs
src/year_2022/day_16/: graph.rs  mod.rs
src/year_2022/day_17/: jet.rs  map.rs  mod.rs
src/year_2023/: mod.rs
src/year_2023/day_01/: mod.rs
src/year_2023/day_02/: game.rs  mod.rs
src/year_2023/day_03/: map.rs  mod.rs
src/year_2023/day_04/: mod.rs
src/year_2023/day_05/: mod.rs  parse.rs
src/year_2023/day_06/: mod.rs
src/year_2023/day_07/: cards.rs  mod.rs
src/year_2023/day_08/: mod.rs  parse.rs
src/year_2023/day_09/: mod.rs
src/year_2023/day_10/: map.rs  mod.rs
(+42 files in other folders)
