[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
anyhow = "1.0"

indicatif = "0.17.2"
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.18.0"
nom = "7.1.3"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[lib]
path = "src/lib/main.rs"
